# constitute-cli

./: .gitignore  ARCHITECTURE.md  CONTRACT.md  Cargo.toml  README.md
src/: app.rs  authority_ops.rs  cli.rs  config.rs  doctor.rs  interactive.rs  keystore.rs  main.rs  output.rs  pairing.rs  protocol_ops.rs  runtime.rs  swarm_ops.rs  transport.rs
tests/: cli_contract.rs
