[package]
name = "constitute-cli"
version = "0.1.0"
edition = "2024"
description = "Protocol-native Constitution console client"
license = "MIT"

[[bin]]
name = "constitute"
path = "src/main.rs"

[dependencies]
anyhow = "1"
aes = "0.8"
argon2 = "0.5"
base64 = "0.22"
cbc = { version = "0.1", features = ["alloc"] }
chacha20poly1305 = { version = "0.10", features = ["std"] }
clap = { version = "4.5", features = ["derive"] }
constitute-protocol = { path = "../constitute-protocol" }
dirs = "6"
hex = "0.4"
keyring = { version = "3", optional = true }
rand = "0.8"
rpassword = "7"
rustyline = "14"
secp256k1 = { version = "0.29", features = ["rand", "global-context"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting"] }
tungstenite = { version = "0.24", features = ["native-tls"] }
uuid = { version = "1", features = ["v4"] }
zeroize = "1"

[features]
default = ["os-keyring"]
os-keyring = ["dep:keyring"]

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
